# controllers/students.controller.js
@@ -4,17 +4,6 @@ const ObjectId = require('mongodb').ObjectId;
 _this = this;
 
 exports.createStudent = async function (req, res) {
-<<<<<<< HEAD
-    // #swagger.tags = ['Estudiantes'];
-	// #swagger.description = ''
-    const nuevoEstudiante = new Estudiante({
-    usuario: req.body.usuario,
-    fechaNacimiento: req.body.fechaNacimiento,
-    mayorEstudioCursado: req.body.mayorEstudioCursado,
-    mayorEstudioFinalizado: req.body.mayorEstudioCursado,
-    })
-=======
->>>>>>> 66285bbd7ad875069001a82de8b4fb3e9232035b
     try {
         const nuevoEstudiante = new Estudiante({
             usuario: req.user_identifier,
@@ -30,17 +19,6 @@ exports.createStudent = async function (req, res) {
 }
 
 exports.getStudents = async function (req, res) {
-<<<<<<< HEAD
-    // #swagger.tags = ['Estudiantes'];
-	// #swagger.description = ''
-    const page = req.query.page ? req.query.page : 1
-    const limit = req.query.limit ? req.query.limit : 10;
-    var options = {
-        page,
-        limit
-    }
-=======
->>>>>>> 66285bbd7ad875069001a82de8b4fb3e9232035b
     try {
         const Students = await Estudiante.find({}).populate('usuarios')
         return res.status(200).json({status: 200, data: Students, message: "Students successfully received"});
@@ -50,13 +28,6 @@ exports.getStudents = async function (req, res) {
 }
 
 exports.getStudentById = async function (req, res) {
-<<<<<<< HEAD
-    // #swagger.tags = ['Estudiantes'];
-	// #swagger.description = ''
-    const identifier= {_id: ObjectId(req.params.id)}
-    console.log(identifier);
-=======
->>>>>>> 66285bbd7ad875069001a82de8b4fb3e9232035b
     try {
         const identifier= {_id: ObjectId(req.params.id)}
         const Student = await Estudiante.findOne(identifier).populate('usuarios');
@@ -67,12 +38,6 @@ exports.getStudentById = async function (req, res) {
 }
 
 exports.removeStudent = async function (req, res) {
-<<<<<<< HEAD
-    // #swagger.tags = ['Estudiantes'];
-	// #swagger.description = ''
-    const identifier= {_id: ObjectId(req.params.id)}
-=======
->>>>>>> 66285bbd7ad875069001a82de8b4fb3e9232035b
     try {
         const identifier= {_id: ObjectId(req.params.id)}
         const studentDeleted = await Estudiante.remove(identifier)
