# controllers/users.controller.js
@@ -6,24 +6,6 @@ require('dotenv').config()
 _this = this;
 
 exports.createUser = async function (req, res) {
-<<<<<<< HEAD
-    // #swagger.tags = ['Usuarios'];
-	// #swagger.description = ''
-    console.log("llegue al controller",req.body)
-    const nuevoUsuario = new Usuario({
-    nombre: req.body.nombre,
-    apellido: req.body.apellido,
-    avatar: req.body.avatar,
-    telofono: req.body.telofono,
-    email: req.body.email,
-    password: bcrypt.hashSync(req.body.password, 8),
-    preguntaVerificacion: req.body.preguntaVerificacion,
-    respuestaVerificacion: bcrypt.hashSync(req.body.respuestaVerificacion, 8),
-    rol: req.body.rol,
-    clases: []
-    })
-=======
->>>>>>> 66285bbd7ad875069001a82de8b4fb3e9232035b
     try {
         const user_email= {email: req.body.email}
         const User = await Usuario.findOne(user_email);
@@ -51,17 +33,6 @@ exports.createUser = async function (req, res) {
 }
 
 exports.getUsers = async function (req, res) {
-<<<<<<< HEAD
-    // #swagger.tags = ['Usuarios'];
-	// #swagger.description = ''
-    const page = req.query.page ? req.query.page : 1
-    const limit = req.query.limit ? req.query.limit : 10;
-    var options = {
-        page,
-        limit
-    }
-=======
->>>>>>> 66285bbd7ad875069001a82de8b4fb3e9232035b
     try {
         const Users = await Usuario.find({}).populate('clases')
         return res.status(200).json({status: 200, data: Users, message: "Successfully received users"});
@@ -71,13 +42,6 @@ exports.getUsers = async function (req, res) {
 }
 
 exports.getUserById = async function (req, res) {
-<<<<<<< HEAD
-    // #swagger.tags = ['Usuarios'];
-	// #swagger.description = ''
-    const identifier= {_id: ObjectId(req.params.id)}
-    console.log(identifier);
-=======
->>>>>>> 66285bbd7ad875069001a82de8b4fb3e9232035b
     try {
         const identifier= {_id: ObjectId(req.params.id)}
         console.log(identifier);
@@ -89,13 +53,6 @@ exports.getUserById = async function (req, res) {
 }
 
 exports.getUserByEmail = async function (req, res) {
-<<<<<<< HEAD
-    // #swagger.tags = ['Usuarios'];
-	// #swagger.description = ''
-    const user_email= {email: req.params.email}
-    console.log(email);
-=======
->>>>>>> 66285bbd7ad875069001a82de8b4fb3e9232035b
     try {
         const user_email= {email: req.params.email}
         const User = await Usuario.findOne(user_email).populate('clases');
@@ -125,12 +82,6 @@ exports.updateUser = async function (req, res) {
 }
 
 exports.removeUser = async function (req, res, next) {
-<<<<<<< HEAD
-    // #swagger.tags = ['Usuarios'];
-	// #swagger.description = ''
-    const identifier= {_id: ObjectId(req.params.id)}
-=======
->>>>>>> 66285bbd7ad875069001a82de8b4fb3e9232035b
     try {
         const identifier= {_id: ObjectId(req.params.id)}
         const userDeleted = await Usuario.remove(identifier)
@@ -141,29 +92,8 @@ exports.removeUser = async function (req, res, next) {
 }
 
 exports.loginUser = async function (req, res) {
-<<<<<<< HEAD
-    // #swagger.tags = ['Usuarios'];
-	// #swagger.description = ''
-    const user_email= {email: req.body.email}
-    const user_password= req.body.password
-    try {
-        const User = await Usuario.findOne(user_email);
-        const passwordIsValid = bcrypt.compareSync(user_password, User.password);
-        if (!passwordIsValid)
-            return res.status(400).json({message: "Invalid username or password"})
-        // else {
-            // const token = jwt.sign({
-            //     id: _details._id
-            // }, process.env.SECRET, {
-            //     expiresIn: 86400 // expires in 24 hours
-            // });
-            // const loginUser = {token:token, user:User};
-            return res.status(201).json({User, message: "Succesfully login"})
-        // }
-=======
     const {body}=req
     const {email,password}=body
->>>>>>> 66285bbd7ad875069001a82de8b4fb3e9232035b
 
     const user = await Usuario.findOne({email})
     
